# modelsdotdev-python

./: .gitignore  LICENSE  README.md  build_backend.py  hatch_build.py  pyproject.toml
.github/fixtures/: api-url-compromise.json
.github/scripts/: check_upstream_api_urls.py  commit_version.js  create_api_url_dry_run_baseline.py  create_release.js  fetch_upstream_json.py  plan_release.js  test_installed_wheel.sh
.github/workflows/: ci.yml  publish-dry-run.yml  publish-scheduled.yml  publish.yml
src/modelsdotdev/: .gitignore  __init__.py
src/modelsdotdev/_internal/: data.py  dist.py  schema.py  sync.py
tests/: conftest.py  test_api.py  test_sourcecode.py  test_upstream_api_url_check.py
